chore(index.html): fix doctype declaration to use uppercase 'DOCTYPE' for HTML5 compliance feat(index.html): add preconnect links for Google Fonts and Material Icons to improve page loading performance chore(package.json): add 'react-spinners' package as a dependency to enable the use of loading spinners in the app style(App.css): remove custom-input class and update styles for form elements to improve visual consistency style(App.css): update styles for ul element to use a more descriptive class name 'shows-list' refactor(App.jsx): wrap List component in a section element for better semantic structure refactor(Input.jsx): update Autocomplete options to include label and id properties for better compatibility with MUI Autocomplete component style(List.jsx): add loading spinner component and update styles for ul element to use a more descriptive class name 'shows-list' refactor(List.jsx): add conditional rendering for loading state and display a message when no shows are available style(Search.jsx): remove console.log statement style(main.jsx): update import statements to use single quotes and remove unnecessary semicolon

--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,6 @@ form div {
   background-color: #d7d7d7;
 }
 
-.custom-input {
-  background-color: #007bff;
-  color: #0056b3;
-}
 label {
   font-weight: bold;
 }
@@ -46,7 +42,7 @@ button:hover {
   background-color: #0056b3;
 }
 
-ul {
+.shows-list {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
